# DeveloperLeadTest

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
Arquitectura/: Justificación.md  README.md  diagrama-contexto.md  diagrama-secuencia.md  gestión de equipo.md  maquina-estados.md  modelo-datos.md
Arquitectura/ADR/: 0001-estrategia-despliegue.md
app/: __init__.py  config.py  database.py  deps.py  enums.py  errors.py  logging_config.py  main.py  middleware.py  models.py  ratelimit.py  schemas.py  security.py
app/routers/: _helpers.py  auth.py  health.py  negotiations.py  requests.py
app/services/: audit.py  negotiation.py  users.py
app/static/: app.js  index.html  styles.css
tests/: conftest.py  helpers.py  test_auth.py  test_idempotency.py  test_negotiation.py  test_security.py  test_transaction.py
