[project]
name = "procurement-negotiation-api"
version = "1.0.0"
description = "Product requests, supplier offers and counteroffer negotiation."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "email-validator==2.2.0",
    "psycopg[binary]==3.2.3",
    "PyJWT==2.10.1",
    "bcrypt==4.2.1",
    "python-multipart==0.0.20",
    "prometheus-fastapi-instrumentator==7.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

# This is an application, not a library: uv installs the locked dependencies
# into .venv but does not try to build/install the project itself.
[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
